# Battleship-Api

./: LICENSE  Makefile  README.md  api.spec.yaml  pyproject.toml
api/: urls.py
api/application/: services.py
api/domain/: choices.py  entities.py  exceptions.py  serializers.py
api/infrastructure/: models.py  views.py
api/migrations/: 0001_initial.py  0002_alter_coin_date.py  0003_alter_coin_options_alter_coin_unique_together.py
app/: settings.py  urls.py
tests/application/: test_service.py
tests/domain/: factories.py
tests/infrastructure/: test_model.py  test_view.py
