[tool.poetry]
name = "Bitcoin Insider"
version = "0.1.0"
description = ""
authors = ["nicola gernone <nicola.gernone02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.4"
django-model-utils = "^4.3.1"
requests = "^2.31.0"
drf-yasg = "^1.21.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.11.1"
flake8 = "^6.0.0"
factory-boy = "^3.3.0"
coverage = "^7.2.7"
black = "^23.7.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

